# telezhka-finance-bot

./: .dockerignore  .env.example  .gitignore  AGENT.MD  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
app/: config.py  employees.py  logging_config.py  main.py  reminders.py  retry.py  services.py
app/bot/: formatters.py  handlers.py  keyboards.py
app/integrations/: evotor.py  evotor_token_receiver.py  google_sheets.py
app/parser/: finance_parser.py  models.py
app/salary/: engine.py
app/statistics/: engine.py
app/storage/: database.py  models.py  repositories.py
deploy/nginx/: telezhka.conf
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_reminder_chats.py
tests/: test_evotor.py  test_evotor_token_receiver.py  test_google_sheets.py  test_parser.py  test_reminders.py  test_services.py  test_statistics.py
