[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "staff-finance-bot"
version = "0.1.0"
description = "Production-ready Telegram bot for staff revenue and salary accounting"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "aiosqlite>=0.19,<1.0",
    "alembic>=1.13,<2.0",
    "gspread>=6.1,<7.0",
    "google-auth>=2.29,<3.0",
    "python-json-logger>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]
